fix: nft view box info responsive spacing fix

--- a/src/containers/other/NFTView/NFTView.module.scss
+++ b/src/containers/other/NFTView/NFTView.module.scss
@@ -462,8 +462,9 @@
 
 	.Contract {
 		width: 100%;
-		&:last-child {
-			margin-top: 0;
+		margin-top: 0;
+		&:first-of-type {
+			margin-top: 16px;
 		}
 	}
 
